--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,9 +36,9 @@
     {% if page.image.feature %}
     <div class="page-lead" style="background-image:url({{ site.url }}/images/{{ page.image.feature }})">
       <div class="wrap page-lead-content">
-        <h1>Skinny Bones</h1>
-        <h2>Jump start your Jekyll site with something thin and light.</h2>
-        <a href="{{ site.url }}/getting-started/" class="btn-inverse">Start Using Skinny Bones</a> &nbsp; or &nbsp; <a href="https://github.com/mmistakes/skinny-bones-jekyll" class="btn-inverse">View on GitHub</a>
+        <h1>Seperate Strings</h1>
+        <h2>Each note may have its own sound and place in a room</h2>
+        <a href="{{ site.url }}/getting-started/" class="btn-inverse">Support Us</a> &nbsp; or &nbsp; <a href="https://github.com/mmistakes/skinny-bones-jekyll" class="btn-inverse">View on Facebook</a>
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
     {% endif %}
