--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@
       <div class="wrap page-lead-content">
         <h1>Seperate Strings</h1>
         <h2>Each note may have its own sound and place in a room</h2>
-        <a href="{{ site.url }}/getting-started/" class="btn-inverse">Support Us</a> &nbsp; or &nbsp; <a href="https://github.com/mmistakes/skinny-bones-jekyll" class="btn-inverse">View on Facebook</a>
+        <!--<a href="{{ site.url }}/getting-started/" class="btn-inverse">Support Us</a> &nbsp; or &nbsp; <a href="https://github.com/mmistakes/skinny-bones-jekyll" class="btn-inverse">View on Facebook</a>-->
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
     {% endif %}
