--- a/css/main.scss
+++ b/css/main.scss
@@ -24,9 +24,9 @@ sitemap: false
 @import "vendor/neat/neat";
 @import "vendor/font-awesome/font-awesome";
 
-h2 { font-family: 'Basic', sans-serif;}
-h3 { font-family: 'Mallanna', sans-serif;}
-h1 { font-family: 'Bowlby One SC', cursive;}
+h2 { font-family: 400 45px/0.5 'Basic', sans-serif;}
+h3 { font-family: 400 45px/0.5 'Mallanna', sans-serif;}
+h1 { font-family: 400 45px/0.5 'Bowlby One SC', cursive;}
 
 
 /*
@@ -60,3 +60,4 @@ h1 { font-family: 'Bowlby One SC', cursive;}
    ========================================================================== */
 
 @import "layout";
+
