fixing CSS and adding fonts to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,9 @@
 <header id="masthead">
+	<style>
+
+	@import url(https://fonts.googleapis.com/css?family=Titillium+Web:400,300,600|Basic|Mallanna|Gafata|Bowlby+One+SC|Catamaran:400,300);
+
+	</style>
   <div class="inner-wrap">
     <a href="{{ site.url }}/" class="site-title">{{ site.title }}</a>
     <nav role="navigation" class="menu top-menu">
