Revert "fixing css"
This reverts commit 5360026b2985b55954f7cb29945dbcc3825e2d7b.

--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,7 @@ sitemap: false
 
 /*
  *
- *  Separate Strings Jekyll
+ *  Seperate Strings Jekyll
  *
  *  Designer: Moenika Chowdhury
  *  
@@ -24,6 +24,9 @@ sitemap: false
 @import "vendor/neat/neat";
 @import "vendor/font-awesome/font-awesome";
 
+h2 { font-family: 400 45px/0.5 'Basic', sans-serif;}
+h3 { font-family: 400 45px/0.5 'Mallanna', sans-serif;}
+h1 { font-family: 400 45px/0.5 'Bowlby One SC', cursive;}
 
 
 /*
