--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,5 +11,6 @@
 		{% endfor %}
 		</ul>
 	</nav><!-- /.bottom-menu -->
-	<p class="copyright">&#169; {{ site.time | date: '%Y' }} <a href="{{ site.url }}">{{ site.title }}</a>.</p>
+	<p class="copyright">&#169; {{ site.time | date: '%Y' }} <a href="{{ site.url }}">{{ site.title }}</a>. Site Designed by Moenika Chowdhury</p>
+	<p
 </footer>
