--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,10 +35,9 @@
 
     {% if page.image.feature %}
     <div class="page-lead" style="background-image:url({{ site.url }}/images/{{ page.image.feature }})">
-      <div class="wrap page-lead-content">
+      <div class="wrap page-lead-content" style="background-image:url({{ site.url }}/images/{{ page.image.feature }})">
         <h1>Separate Strings</h1>
         <h2>Each note may have its own sound and place in a room</h2>
-        <!--<a href="{{ site.url }}/getting-started/" class="btn-inverse">Support Us</a> &nbsp; or &nbsp; <a href="https://github.com/mmistakes/skinny-bones-jekyll" class="btn-inverse">View on Facebook</a>-->
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
     {% endif %}
