--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,7 +34,7 @@
     {% include navigation-sliding.html %}
 
     {% if page.image.feature %}
-    <div class="page-lead" style="background-image:url({{ site.url }}/images/{{ page.image.feature }})">
+    <div class="page-lead" style="background-color:#000;">
       <div class="wrap page-lead-content" style="background-image:url({{ site.url }}/images/{{ page.image.feature }})">
         <h1>Separate Strings</h1>
         <h2>Each note may have its own sound and place in a room</h2>
