more css style fixes

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,7 @@
 
     {% if page.image.feature %}
     <div class="page-lead" style="background-color:#1e1311;">
-      <div class="wrap page-lead-content" style="background-image:url({{ site.url }}/images/{{ page.image.feature }});background-position: center top !important;background-repeat: no-repeat !important;background-attachment: fixed !important;text-align: center;background-size: contain !important;">
+      <div class="wrap page-lead-content" style="background-image:url({{ site.url }}/images/{{ page.image.feature }});background-position: 50% 10%;background-repeat: no-repeat !important;background-attachment: fixed !important;text-align: center;background-size: 68%;">
         <h1>Separate Strings</h1>
         <h2>Each note may have its own sound and place in a room</h2>
       </div><!-- /.page-lead-content -->
